# tetris

./: .gitignore  CMakeLists.txt  CmakeLists.txt  build.bat  build.sh  clean.bat  clean.sh  readme.md
media/: desktop.ini
shader/: out.frag  out.vert
src/: GLFW_wnd.cpp  GLFW_wnd.h  assets.h  default_factory.h  ffmpeg.h  filter.h  game_mng.h  glad.c  log.h  main.cpp  mino_factory.h  openal.cpp  openal.h  opengl.cpp  opengl.h  player.cpp  player.h  render.h  scene.cpp  scene.h  sett.h  sound.cpp  sound.h  tetris.cpp  tetris.h  types.h  window.cpp  window.h
